# algonaut-myalgo-yew-template

./: Cargo.toml  README.md
src/: bindings.rs  dependencies.rs  lib.rs  my_algo.rs  myalgo_glue.js  provider.rs  to_my_algo_transaction.rs
static/: index.html  styles.css
