[package]
name = "algonaut-myalgo-example"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanschuetz@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "An example for using MyAlgo-Connect with Rust and Algonaut"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
wasm-logger = "0.2"
log = "0.4"
yew = "0.17"
yewtil = { version = "0.3" }
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main" }
my-algo = { git = "https://github.com/i-schuetz/my-algo-rust-adapter", branch = "main" }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
data-encoding = "2.3.1"
serde_with = "1.9.4"
serde_json = "1.0.64"
